schemas/Home Insurance/v1.0.0/storms.md
| Excel Column   | Field Name                                                                                                                                    | Sample Value        | Comment 1               | Comment 2   | In Kaggle   |
|:---------------|:----------------------------------------------------------------------------------------------------------------------------------------------|:--------------------|:------------------------|:------------|:------------|
| A              | Date                                                                                                                                          | 2022-08-23 00:00:00 | Date of Storm           |             | No          |
| B              | Storm_Type                                                                                                                                    | Tropical Storm      | Could also be Hurricane |             | No          |
| C              | State                                                                                                                                         | FL                  |                         |             | No          |
| D              | Country                                                                                                                                       | United States       |                         |             | No          |
| E              | Latitude                                                                                                                                      | 28.2741             | North of Tampa, Florida |             | No          |
| F              | Longitude                                                                                                                                     | -82.2228            |                         |             | No          |
|                |                                                                                                                                               |                     |                         |             |             |
| NOTE:          | File has a list of all signficant tropical storms and hurricanes during transaction period where significant insurance losses may be incurred |                     |                         |             |             |
|                | All storms are simulated -- but follow geographic and time-of-year likelihoods of hurricanes and tropical storms                              |                     |                         |             |             |
