schemas/Home Insurance/v1.1.0/storms.md
| Excel Column   | Field Name                                                                                                                                    | Sample Value        | Comment 1                                            | Comment 2                                                                                                                               | In Kaggle   |
|:---------------|:----------------------------------------------------------------------------------------------------------------------------------------------|:--------------------|:-----------------------------------------------------|:----------------------------------------------------------------------------------------------------------------------------------------|:------------|
| A              | Storm_Event_Index                                                                                                                             | 5                   | Numbering [1, N] of N hurricanes and tropical storms | Insurance claims refer to this number if the claim is associated with a storm (and have 0 if the claim is not associated with a storm). | No          |
| B              | Date                                                                                                                                          | 2022-08-23 00:00:00 | Date of Storm                                        |                                                                                                                                         | No          |
| C              | Storm_Type                                                                                                                                    | Tropical Storm      | Could also be Hurricane                              |                                                                                                                                         | No          |
| D              | State                                                                                                                                         | FL                  |                                                      |                                                                                                                                         | No          |
| E              | Country                                                                                                                                       | United States       |                                                      |                                                                                                                                         | No          |
| F              | Latitude                                                                                                                                      | 28.2741             | North of Tampa, Florida                              |                                                                                                                                         | No          |
| G              | Longitude                                                                                                                                     | -82.2228            |                                                      |                                                                                                                                         | No          |
|                |                                                                                                                                               |                     |                                                      |                                                                                                                                         |             |
|                |                                                                                                                                               |                     |                                                      |                                                                                                                                         |             |
| NOTE:          | File has a list of all signficant tropical storms and hurricanes during transaction period where significant insurance losses may be incurred |                     |                                                      |                                                                                                                                         |             |
|                | All storms are simulated -- but follow geographic and time-of-year likelihoods of hurricanes and tropical storms                              |                     |                                                      |                                                                                                                                         |             |
